2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvticache.c (nvticache_add): New function to write a nvti file
	to the cache.

	* base/nvticache.h: Add proto accordingly.

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/store.c (store_plugin): Removed code that handles the
	unused variable "path".

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Resolved unnecessary
	call of arg_get_value.

2012-07-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removing preparse module which was a left-over of a never-finished
	concept of pre-compiled nasl files.

	* nasl/preparse.c, nasl/preparse.h: Removed.

	* nasl/exec.c (exec_nasl_script): Replaced call of nasl_reload_or_parse()
	by immediate calls to init and parse a nasl.

	* nasl/lint.c: Removed unnecessary include of preparse.h.

	* nasl/CMakeLists.txt: Removed handling of module preparse.c.

	COPYING: Remove preparse.c|h from the list.

2012-07-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_grammar.y: Removed TODO about signature checking.
	The signature check is ensured via function call of init_nasl_ctx().

2012-07-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt: Ensure that compilation with modern
	gccs works by moving linker flags from LINK_FLAGS to
	target_link_libraries.

2012-07-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/CMakeLists.txt: Commented hg-test executable target,
	as it causes build failures in certain environments.

2012-07-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/hg_add_hosts.c (hg_add_host): Initialize struct with sensible
	value before using, stunt with bufferlength.

2012-07-02  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/test.c: Fix definition of bufferlen for inet_ntop.

2012-07-02  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
