@@ -1,5 +1,10 @@
 2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* misc/store.c (store_plugin): Reduced code by using new function
+	nvticache_add().
+
+2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* base/nvticache.c (nvticache_add): New function to write a nvti file
 	to the cache.
 
